# wagtail-block-reference

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_block_reference.py
tests/e2e/: conftest.py  settings.py  test_js_patch.py  urls.py
tests/e2e/testapp/: apps.py  models.py
tests/e2e/testapp/migrations/: 0001_initial.py
wagtail_block_reference/: __init__.py  apps.py  block_reference.py  patches.py  wagtail_hooks.py
wagtail_block_reference/static/wagtail_block_reference/js/: patch.js
